# hris-be-rust

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: auth_handler.rs  lib.rs  project_handler.rs
application/: Cargo.toml
application/src/auth/: token.rs
application/src/project/: create.rs  delete.rs  publish.rs  read.rs
domain/: Cargo.toml
domain/src/: models.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2024-04-16-135705_create_companies/: down.sql  up.sql
infrastructure/src/: lib.rs  schema.rs
shared/: Cargo.toml
shared/src/: response_models.rs
