[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.0.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.88"


chrono = "0.4.23"
bcrypt = "0.15.0"
